# fastapi-clean-architecture

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: b9346c181676_initial_migration.py
docs/: ARCHITECTURE.md  DOMAIN_CREATION.md  FAQ.md  MIGRATION_GUIDE.md
examples/: README.md
src/app/: main.py
src/app/core/: config.py  database.py  exceptions.py  handlers.py  logging_config.py  validation.py
src/app/core/config/: __init__.py
src/app/core/database/: __init__.py  session.py
src/app/core/errors/: __init__.py  exceptions.py  handlers.py  schemas.py
src/app/core/logging/: __init__.py  logging_config.py
src/app/core/validation/: __init__.py  utils.py
src/app/domains/: __init__.py
src/app/domains/user/: dependencies.py
src/app/domains/user/entities/: __init__.py  user.py
src/app/domains/user/infrastructure/: __init__.py
src/app/domains/user/infrastructure/database/: models.py  user_repository_impl.py
src/app/domains/user/mappers/: __init__.py  base_mapper.py  dtos.py  entity_dto_mapper.py  entity_model_mapper.py  entity_schema_mapper.py
src/app/domains/user/presentation/: __init__.py
src/app/domains/user/presentation/v1/: __init__.py  router.py  schemas.py
src/app/domains/user/repositories/: user_repository.py
src/app/domains/user/use_cases/: __init__.py  create_user.py  delete_user.py  get_user.py
